updated order microservice functionality